revised some content

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
-                <img src="images/back.jpg" alt="Logo" class="logo-img">
-                <span>Zhiwei Yu</span>
+                <img src="images/My_Puppy.png" alt="Logo" class="logo-img">
+                <span>Zhiwei's Homepage</span>
             </a>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -42,8 +42,8 @@
                 </div>
                 <div class="hero-text">
                     <h1>Zhiwei Yu</h1>
-                    <div class="title">Senior Researcher</div>
-                    <div class="affiliation">Multimodal Interaction Research Center<br>BAAI</div>
+                    <div class="title">Exploring the World</div>
+                    <div class="affiliation">Senior Researcher at Multimodal Interaction Research Center<br>BAAI</div>
                     <div class="contact-links">
                         <a href="mailto:yuzhiwei.v@gmailcom" class="contact-link">Email</a>
                         <a href="https://scholar.google.com/citations?user=h6rZDMkAAAAJ" class="contact-link">Google
@@ -60,14 +60,15 @@
             <div class="about-grid">
                 <div class="about-text">
                     I design smart systems—digital or embodied— to turn real-world chaos into innovation—where AI,
-                    product, and business collide.
+                    product, and business collide. My recent focus is long-horizon loco-manipulation challenges in huimanoid legged robots.
                 </div>
                 <div class="about-interests">
                     <h3>Research Interests</h3>
                     <ul class="interests-list">
-                        <li>Multimodal Interaction</li>
-                        <li>Embodied AI</li>
+                        <li>Multimodal & Embodied AI</li>
                         <li>Knowledge Computing</li>
+                        <li>Human-Robot Interaction</li>
+                        <li>Computational Humor</li>
                     </ul>
                 </div>
             </div>
