Added Semantic Scholar

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                         <a href="https://scholar.google.com/citations?user=h6rZDMkAAAAJ" class="contact-link">Google
                             Scholar</a>
                         <a href="https://github.com/yuzhiwei-v" class="contact-link">GitHub</a>
+                        <a href="https://www.semanticscholar.org/author/Zhiwei-Yu/2114173" class="contact-link">Semantic Scholar</a>
                     </div>
                 </div>
             </div>
